--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
 
     <div class="list">
       <a class="item" onclick="showPost('${_id}')" data="posts">
-        <div class="left cover avatar-list" style="background-image: url(${image})"></div>
+        <div class="left cover avatar-list blue-grey-400" style="background-image: url(${image})"></div>
         <h2 class="font-libre">${title}</h2>
         <p class="text-italic opacity-70">
           $$formatDate{datetime} - ${author}
