--- a/www/post.html
+++ b/www/post.html
@@ -35,6 +35,9 @@
           $$getTagsPost{_id}
           <h1 class="margin-top font-libre text-big text-strong text-shadow">${title}</h1>
           <p class="text-italic opacity-80">
+            <div class="right">
+              <img class="language" src="$$getImgLanguage{language}">
+            </div>
             $$formatDate{datetime} - ${author}
           </p>
         </div>
